@@ -20,6 +20,9 @@ package org.eclipse.microprofile.openapi.tck;
 // import static org.testng.Assert.assertNotSame;
 // import static org.testng.Assert.assertSame;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.anEmptyMap;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.sameInstance;
 import static org.testng.Assert.assertEquals;
@@ -40,6 +43,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -166,7 +170,7 @@ public class ModelConstructionTest extends Arquillian {
             try {
                 return getter.invoke(target);
             } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-                fail("Invocation of getter method \"" + getter.getName() + "\" failed: " + e.getMessage());
+                fail("Invocation of getter method \"" + getter.getName() + "\" failed: " + e.getMessage(), e);
                 throw new RuntimeException(e);
             }
         }
@@ -174,7 +178,7 @@ public class ModelConstructionTest extends Arquillian {
             try {
                 setter.invoke(target, value);
             } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-                fail("Invocation of setter method \"" + setter.getName() + "\" failed: " + e.getMessage());
+                fail("Invocation of setter method \"" + setter.getName() + "\" failed: " + e.getMessage(), e);
                 throw new RuntimeException(e);
             }
         }
@@ -182,7 +186,7 @@ public class ModelConstructionTest extends Arquillian {
             try {
                 return builder.invoke(target, value);
             } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-                fail("Invocation of builder method \"" + builder.getName() + "\" failed: " + e.getMessage());
+                fail("Invocation of builder method \"" + builder.getName() + "\" failed: " + e.getMessage(), e);
                 throw new RuntimeException(e);
             }
         }
@@ -990,6 +994,7 @@ public class ModelConstructionTest extends Arquillian {
         checkNullValueInAdd(mt::getExamples, mt::addExample, "otherExample", exampleValue);
     }
 
+    @SuppressWarnings("deprecation") // Testing deprecated Schema methods
     @Test
     public void schemaTest() {
         final Schema s = processConstructible(Schema.class);
@@ -999,21 +1004,39 @@ public class ModelConstructionTest extends Arquillian {
         checkSameObject(ap, s.getAdditionalPropertiesSchema());
         assertEquals(s.getAdditionalPropertiesBoolean(), null,
                 "AdditionalProperties (Boolean type) is expected to be null");
+
         checkSameObject(s, s.additionalPropertiesBoolean(Boolean.TRUE));
         assertEquals(s.getAdditionalPropertiesBoolean(), Boolean.TRUE,
                 "AdditionalProperties (Boolean type) is expected to be true");
-        assertEquals(s.getAdditionalPropertiesSchema(), null,
-                "AdditionalProperties (Schema type) is expected to be null");
+        Schema s2 = s.getAdditionalPropertiesSchema();
+        assertNotNull(s2, "AdditionalProperties (Schema type) is expected to be non-null");
+        assertEquals(s2.getBooleanSchema(), Boolean.TRUE,
+                "AdditionalProperties (Schema type) is expected to return a boolean-true schema");
+
         s.setAdditionalPropertiesBoolean(Boolean.FALSE);
         assertEquals(s.getAdditionalPropertiesBoolean(), Boolean.FALSE,
                 "AdditionalProperties (Boolean type) is expected to be false");
-        assertEquals(s.getAdditionalPropertiesSchema(), null,
-                "AdditionalProperties (Schema type) is expected to be null");
+        s2 = s.getAdditionalPropertiesSchema();
+        assertNotNull(s2, "AdditionalProperties (Schema type) is expected to be non-null");
+        assertEquals(s2.getBooleanSchema(), Boolean.FALSE,
+                "AdditionalProperties (Schema type) is expected to return a boolean-false schema");
+
         s.setAdditionalPropertiesSchema(null);
         assertEquals(s.getAdditionalPropertiesBoolean(), null,
                 "AdditionalProperties (Boolean type) is expected to be null");
         assertEquals(s.getAdditionalPropertiesSchema(), null,
                 "AdditionalProperties (Schema type) is expected to be null");
+
+        s.setExamples(null);
+        s.setExample("example1");
+        assertEquals(s.getExample(), "example1", "Example is expected to be set");
+        assertNull(s.getExamples(), "Examples should be null");
+        s.setExamples(Arrays.asList("example2", "example3"));
+        assertEquals(s.getExample(), "example1", "Example should not be affected by settings examples");
+        assertThat("Examples should be set", s.getExamples(), contains("example2", "example3"));
+        s.setExample("example4");
+        assertEquals(s.getExample(), "example4", "Example should be set");
+        assertThat("Examples should not be affected by example", s.getExamples(), contains("example2", "example3"));
 
         final Schema allOf = createConstructibleInstance(Schema.class);
         checkSameObject(s, s.addAllOf(allOf));
@@ -1124,7 +1147,285 @@ public class ModelConstructionTest extends Arquillian {
         checkListEntry(s.getRequired(), required);
 
         final String otherRequiredValue = new String("otherRequired");
-        checkListImmutable(s, Schema::getEnumeration, otherRequiredValue);
+        checkListImmutable(s, Schema::getRequired, otherRequiredValue);
+
+        final String dependentSchemaKey = "myDependentSchemaKey";
+        final Schema dependentSchemaValue = createConstructibleInstance(Schema.class);
+        checkSameObject(s, s.addDependentSchema(dependentSchemaKey, dependentSchemaValue));
+        checkMapEntry(s.getDependentSchemas(), dependentSchemaKey, dependentSchemaValue);
+        assertEquals(s.getDependentSchemas().size(), 1, "The map is expected to contain one entry.");
+        s.removeDependentSchema(dependentSchemaKey);
+        assertEquals(s.getDependentSchemas().size(), 0, "The map is expected to be empty.");
+
+        final String dependentSchemaKey2 = "myDependentSchemaKey2";
+        final Schema dependentSchemaValue2 = createConstructibleInstance(Schema.class);
+        s.setDependentSchemas(Collections.singletonMap(dependentSchemaKey2, dependentSchemaValue2));
+        checkMapEntry(s.getDependentSchemas(), dependentSchemaKey2, dependentSchemaValue2);
+        assertEquals(s.getDependentSchemas().size(), 1, "The map is expected to contain one entry.");
+        checkSameObject(s, s.addDependentSchema(dependentSchemaKey, dependentSchemaValue));
+        checkMapEntry(s.getDependentSchemas(), dependentSchemaKey, dependentSchemaValue);
+        assertEquals(s.getDependentSchemas().size(), 2, "The map is expected to contain two entries.");
+
+        final Schema otherDependentSchemaValue = createConstructibleInstance(Schema.class);
+        checkMapImmutable(s, Schema::getDependentSchemas, "otherDependentSchemaKey", otherDependentSchemaValue);
+        checkNullValueInAdd(s::getDependentSchemas, s::addDependentSchema, "otherDependentSchemaKey",
+                dependentSchemaValue);
+
+        final Schema prefixItem = createConstructibleInstance(Schema.class);
+        checkSameObject(s, s.addPrefixItem(prefixItem));
+        checkListEntry(s.getPrefixItems(), prefixItem);
+        assertEquals(s.getPrefixItems().size(), 1, "The list is expected to contain one entry.");
+        s.removePrefixItem(prefixItem);
+        assertEquals(s.getPrefixItems().size(), 0, "The list is expected to be empty.");
+
+        final Schema prefixItem2 = createConstructibleInstance(Schema.class);
+        s.setPrefixItems(Collections.singletonList(prefixItem2));
+        assertEquals(s.getPrefixItems().size(), 1, "The list is expected to contain one entry.");
+        checkListEntry(s.getPrefixItems(), prefixItem2);
+        checkSameObject(s, s.addPrefixItem(prefixItem));
+        assertEquals(s.getPrefixItems().size(), 2, "The list is expected to contain two entries.");
+        checkListEntry(s.getPrefixItems(), prefixItem);
+
+        final Schema otherPrefixItemValue = createConstructibleInstance(Schema.class);
+        checkListImmutable(s, Schema::getPrefixItems, otherPrefixItemValue);
+
+        final String patternPropertyKey = "myPatternPropertyKey";
+        final Schema patternPropertyValue = createConstructibleInstance(Schema.class);
+        checkSameObject(s, s.addPatternProperty(patternPropertyKey, patternPropertyValue));
+        checkMapEntry(s.getPatternProperties(), patternPropertyKey, patternPropertyValue);
+        assertEquals(s.getPatternProperties().size(), 1, "The map is expected to contain one entry.");
+        s.removePatternProperty(patternPropertyKey);
+        assertEquals(s.getPatternProperties().size(), 0, "The map is expected to be empty.");
+
+        final String patternPropertyKey2 = "myPatternPropertyKey2";
+        final Schema patternPropertyValue2 = createConstructibleInstance(Schema.class);
+        s.setPatternProperties(Collections.singletonMap(patternPropertyKey2, patternPropertyValue2));
+        checkMapEntry(s.getPatternProperties(), patternPropertyKey2, patternPropertyValue2);
+        assertEquals(s.getPatternProperties().size(), 1, "The map is expected to contain one entry.");
+        checkSameObject(s, s.addPatternProperty(patternPropertyKey, patternPropertyValue));
+        checkMapEntry(s.getPatternProperties(), patternPropertyKey, patternPropertyValue);
+        assertEquals(s.getPatternProperties().size(), 2, "The map is expected to contain two entries.");
+
+        final Schema otherPatternPropertyValue = createConstructibleInstance(Schema.class);
+        checkMapImmutable(s, Schema::getPatternProperties, "otherPatternPropertyKey", otherPatternPropertyValue);
+        checkNullValueInAdd(s::getPatternProperties, s::addPatternProperty, "otherPatternPropertyKey",
+                patternPropertyValue);
+
+        final String dependentRequiredKey = "myDependentRequiredKey";
+        final List<String> dependentRequiredValue = Collections.singletonList("myDependentRequired");
+        checkSameObject(s, s.addDependentRequired(dependentRequiredKey, dependentRequiredValue));
+        checkMapEntry(s.getDependentRequired(), dependentRequiredKey, dependentRequiredValue);
+        assertEquals(s.getDependentRequired().size(), 1, "The map is expected to contain one entry.");
+        s.removeDependentRequired(dependentRequiredKey);
+        assertEquals(s.getDependentRequired().size(), 0, "The map is expected to be empty.");
+
+        final String dependentRequiredKey2 = "myDependentRequiredKey2";
+        final List<String> dependentRequiredValue2 = Collections.singletonList("myDependentRequired2");
+        s.setDependentRequired(Collections.singletonMap(dependentRequiredKey2, dependentRequiredValue2));
+        checkMapEntry(s.getDependentRequired(), dependentRequiredKey2, dependentRequiredValue2);
+        assertEquals(s.getDependentRequired().size(), 1, "The map is expected to contain one entry.");
+        checkSameObject(s, s.addDependentRequired(dependentRequiredKey, dependentRequiredValue));
+        checkMapEntry(s.getDependentRequired(), dependentRequiredKey, dependentRequiredValue);
+        assertEquals(s.getDependentRequired().size(), 2, "The map is expected to contain two entries.");
+
+        final List<String> otherDependentRequiredValue = Collections.singletonList("myOtherDependentRequired");
+        checkMapImmutable(s, Schema::getDependentRequired, "otherDependentRequiredKey", otherDependentRequiredValue);
+        checkNullValueInAdd(s::getDependentRequired, s::addDependentRequired, "otherDependentRequiredKey",
+                dependentRequiredValue);
+    }
+
+    @SuppressWarnings("deprecation") // Testing deprecated Schema methods
+    @Test
+    public void testSchemaArbitraryProperties() {
+        Schema s = createConstructibleInstance(Schema.class);
+
+        testSchemaProperty(s, "discriminator", Schema::getDiscriminator, Schema::setDiscriminator,
+                createConstructibleInstance(Discriminator.class));
+        testSchemaProperty(s, "title", Schema::getTitle, Schema::setTitle, "test title");
+        testSchemaProperty(s, "default", Schema::getDefaultValue, Schema::setDefaultValue, "test");
+        testSchemaListProperty(s, "enum", Schema::getEnumeration, Schema::setEnumeration, "a");
+        testSchemaProperty(s, "multipleOf", Schema::getMultipleOf, Schema::setMultipleOf, new BigDecimal("3"));
+        testSchemaProperty(s, "maximum", Schema::getMaximum, Schema::setMaximum, new BigDecimal("3"));
+        testSchemaProperty(s, "exclusiveMaximum", Schema::getExclusiveMaximum, Schema::setExclusiveMaximum,
+                new BigDecimal("3"));
+        testSchemaProperty(s, "minimum", Schema::getMinimum, Schema::setMinimum, new BigDecimal("3"));
+        testSchemaProperty(s, "exclusiveMinimum", Schema::getExclusiveMinimum, Schema::setExclusiveMinimum,
+                new BigDecimal("3"));
+        testSchemaProperty(s, "maxLength", Schema::getMaxLength, Schema::setMaxLength, 17);
+        testSchemaProperty(s, "minLength", Schema::getMinLength, Schema::setMinLength, 5);
+        testSchemaProperty(s, "pattern", Schema::getPattern, Schema::setPattern, "[a-z]+");
+        testSchemaProperty(s, "maxItems", Schema::getMaxItems, Schema::setMaxItems, 5);
+        testSchemaProperty(s, "minItems", Schema::getMinItems, Schema::setMinItems, 3);
+        testSchemaProperty(s, "uniqueItems", Schema::getUniqueItems, Schema::setUniqueItems, true);
+        testSchemaProperty(s, "maxProperties", Schema::getMaxProperties, Schema::setMaxProperties, 10);
+        testSchemaProperty(s, "minProperties", Schema::getMinProperties, Schema::setMinProperties, 8);
+        testSchemaListProperty(s, "required", Schema::getRequired, Schema::setRequired, "propName");
+        testSchemaListProperty(s, "type", Schema::getType, Schema::setType, Schema.SchemaType.OBJECT);
+        testSchemaProperty(s, "not", Schema::getNot, Schema::setNot, createConstructibleInstance(Schema.class));
+        testSchemaMapProperty(s, "properties", Schema::getProperties, Schema::setProperties,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "additionalProperties", Schema::getAdditionalPropertiesSchema,
+                Schema::setAdditionalPropertiesSchema,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "description", Schema::getDescription, Schema::setDescription, "test schema");
+        testSchemaProperty(s, "format", Schema::getFormat, Schema::setFormat, "date-time");
+        testSchemaProperty(s, "readOnly", Schema::getReadOnly, Schema::setReadOnly, true);
+        testSchemaProperty(s, "writeOnly", Schema::getWriteOnly, Schema::setWriteOnly, true);
+        testSchemaProperty(s, "example", Schema::getExample, Schema::setExample, "test");
+        testSchemaProperty(s, "externalDocs", Schema::getExternalDocs, Schema::setExternalDocs,
+                createConstructibleInstance(ExternalDocumentation.class));
+        testSchemaProperty(s, "deprecated", Schema::getDeprecated, Schema::setDeprecated, true);
+        testSchemaProperty(s, "xml", Schema::getXml, Schema::setXml, createConstructibleInstance(XML.class));
+        testSchemaProperty(s, "items", Schema::getItems, Schema::setItems, createConstructibleInstance(Schema.class));
+        testSchemaListProperty(s, "allOf", Schema::getAllOf, Schema::setAllOf,
+                createConstructibleInstance(Schema.class));
+        testSchemaListProperty(s, "anyOf", Schema::getAnyOf, Schema::setAnyOf,
+                createConstructibleInstance(Schema.class));
+        testSchemaListProperty(s, "oneOf", Schema::getOneOf, Schema::setOneOf,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "$schema", Schema::getSchemaDialect, Schema::setSchemaDialect, "http://test.dialect");
+        testSchemaProperty(s, "$comment", Schema::getComment, Schema::setComment, "about this schema");
+        testSchemaProperty(s, "if", Schema::getIfSchema, Schema::setIfSchema,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "then", Schema::getThenSchema, Schema::setThenSchema,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "else", Schema::getElseSchema, Schema::setElseSchema,
+                createConstructibleInstance(Schema.class));
+        testSchemaMapProperty(s, "dependentSchemas", Schema::getDependentSchemas, Schema::setDependentSchemas,
+                createConstructibleInstance(Schema.class));
+        testSchemaListProperty(s, "prefixItems", Schema::getPrefixItems, Schema::setPrefixItems,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "contains", Schema::getContains, Schema::setContains,
+                createConstructibleInstance(Schema.class));
+        testSchemaMapProperty(s, "patternProperties", Schema::getPatternProperties, Schema::setPatternProperties,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "propertyNames", Schema::getPropertyNames, Schema::setPropertyNames,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "unevaluatedItems", Schema::getUnevaluatedItems, Schema::setUnevaluatedItems,
+                createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "unevaluatedProperties", Schema::getUnevaluatedProperties,
+                Schema::setUnevaluatedProperties, createConstructibleInstance(Schema.class));
+        testSchemaProperty(s, "const", Schema::getConstValue, Schema::setConstValue, "value");
+        testSchemaProperty(s, "maxContains", Schema::getMaxContains, Schema::setMaxContains, 5);
+        testSchemaProperty(s, "minContains", Schema::getMinContains, Schema::setMinContains, 3);
+        testSchemaMapProperty(s, "dependentRequired", Schema::getDependentRequired, Schema::setDependentRequired,
+                Arrays.asList("a", "b"));
+        testSchemaProperty(s, "contentEncoding", Schema::getContentEncoding, Schema::setContentEncoding, "base64");
+        testSchemaProperty(s, "contentMediaType", Schema::getContentMediaType, Schema::setContentMediaType,
+                "test/plain");
+        testSchemaProperty(s, "contentSchema", Schema::getContentSchema, Schema::setContentSchema,
+                createConstructibleInstance(Schema.class));
+        testSchemaListProperty(s, "examples", Schema::getExamples, Schema::setExamples, "foo");
+    }
+
+    public <V> void testSchemaProperty(Schema testSchema, String name, Function<Schema, V> getter,
+            BiConsumer<Schema, V> setter, V testValue) {
+        // Set with the setter
+        setter.accept(testSchema, testValue);
+        assertSame(getter.apply(testSchema), testValue,
+                "Getter should return the same instance as was set for property " + name);
+        assertSame(testSchema.get(name), testValue,
+                "Generic getter should return same instance as was set for property " + name);
+
+        // Clear with the setter
+        setter.accept(testSchema, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+
+        // Set with generic access
+        testSchema.set(name, testValue);
+        assertSame(getter.apply(testSchema), testValue,
+                "Getter should return the same instance as was set for property " + name);
+        assertSame(testSchema.get(name), testValue,
+                "Generic getter should return same instance as was set for property " + name);
+
+        // Clear with generic access
+        testSchema.set(name, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+    }
+
+    public <V> void testSchemaMapProperty(Schema testSchema, String name,
+            Function<Schema, Map<String, V>> getter, BiConsumer<Schema, Map<String, V>> setter,
+            V testValue) {
+        // Set with the setter
+        Map<String, V> testMap = new HashMap<>();
+        testMap.put("test1", testValue);
+
+        setter.accept(testSchema, testMap);
+        testMapFromGetter(() -> getter.apply(testSchema), testMap, name);
+        testMapFromGetter(() -> testSchema.get(name), testMap, name);
+
+        // Clear with the setter
+        setter.accept(testSchema, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+
+        // Set with generic access
+        testSchema.set(name, testMap);
+        testMapFromGetter(() -> getter.apply(testSchema), testMap, name);
+        testMapFromGetter(() -> testSchema.get(name), testMap, name);
+
+        // Clear with generic access
+        testSchema.set(name, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+    }
+
+    private <V> void testMapFromGetter(Supplier<Object> getter, Map<String, V> expected,
+            String name) {
+        assertThat("Test error: expected may not be empty", expected, not(anEmptyMap()));
+
+        Object actualObj = getter.get();
+        assertEquals(actualObj, expected, "Getter should return value that was set for property " + name);
+
+        // Check that all values are the same instance
+        Map<?, ?> actualMap = (Map<?, ?>) actualObj;
+        expected.forEach((k, v) -> {
+            assertSame(v, actualMap.get(k),
+                    "Getter should return value with same instance for key " + v + " property " + name);
+        });
+    }
+
+    public <V> void testSchemaListProperty(Schema testSchema, String name,
+            Function<Schema, List<V>> getter, BiConsumer<Schema, List<V>> setter,
+            V testValue) {
+        // Set with the setter
+        List<V> testList = new ArrayList<>();
+        testList.add(testValue);
+
+        setter.accept(testSchema, testList);
+        testListFromGetter(() -> getter.apply(testSchema), testList, name);
+        testListFromGetter(() -> testSchema.get(name), testList, name);
+
+        // Clear with the setter
+        setter.accept(testSchema, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+
+        // Set with generic access
+        testSchema.set(name, testList);
+        testListFromGetter(() -> getter.apply(testSchema), testList, name);
+        testListFromGetter(() -> testSchema.get(name), testList, name);
+
+        // Clear with generic access
+        testSchema.set(name, null);
+        assertNull(getter.apply(testSchema), "Getter should return null for property " + name);
+        assertNull(testSchema.get(name), "Generic access should return null for property " + name);
+    }
+
+    private <V> void testListFromGetter(Supplier<Object> getter, List<V> expected, String name) {
+        assertThat("Test error: expected may not be empty", expected, not(empty()));
+
+        Object actualObj = getter.get();
+        assertEquals(actualObj, expected, "Getter should return value that was set for property " + name);
+
+        // Check that all values are the same instance
+        List<?> actualList = (List<?>) actualObj;
+        expected.forEach((expectedV) -> {
+            assertTrue(actualList.stream().anyMatch((actualV) -> expectedV == actualV),
+                    "Getter should return value containing " + expectedV + " for property " + name);
+        });
     }
 
     @Test
@@ -1524,6 +1825,7 @@ public class ModelConstructionTest extends Arquillian {
                         "\" is expected to be equal to the value that was set.");
             }
         }
+        p.invokeSetter(o, null);
     }
 
     // Returns instances for testing getter, setter and builder methods.
@@ -1546,21 +1848,21 @@ public class ModelConstructionTest extends Arquillian {
         } else if (clazz == String.class) {
             return new String("value");
         } else if (clazz == Boolean.class || clazz == Boolean.TYPE) {
-            return new Boolean(true);
+            return Boolean.valueOf(true);
         } else if (clazz == Byte.class || clazz == Byte.TYPE) {
-            return new Byte((byte) 1);
+            return Byte.valueOf((byte) 1);
         } else if (clazz == Short.class || clazz == Short.TYPE) {
-            return new Short((short) 1);
+            return Short.valueOf((short) 1);
         } else if (clazz == Integer.class || clazz == Integer.TYPE) {
-            return new Integer(1);
+            return Integer.valueOf(1);
         } else if (clazz == Long.class || clazz == Long.TYPE) {
-            return new Long(1L);
+            return Long.valueOf(1L);
         } else if (clazz == Float.class || clazz == Float.TYPE) {
-            return new Float(1);
+            return Float.valueOf(1);
         } else if (clazz == Double.class || clazz == Double.TYPE) {
-            return new Double(1);
+            return Double.valueOf(1);
         } else if (clazz == Character.class || clazz == Character.TYPE) {
-            return new Character('a');
+            return Character.valueOf('a');
         } else if (clazz == BigInteger.class) {
             return new BigInteger("1");
         } else if (clazz == BigDecimal.class) {
